--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,7 +20,7 @@
             <tr>
                 <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-                <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+<!--                <td th:href="@{/list/jobs(column=all,value=${item})}" th:text="${value}"></td> &lt;!&ndash; Feel free to remove or modify this element if necessary. &ndash;&gt;-->
 
                 <td th:each="category : ${tableChoices}">
                     <ul>
