continued working on search function

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,6 +37,7 @@
     <hr />
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
+    <p th:replace="list-jobs :: jobs-list"></p>
 
 </div>
 
