--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,7 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-    <table class="job-listing" th:each="job:${jobs}">
+    <table th:fragment="jobs-list" class="job-listing" th:each="job:${jobs}">
         <th:block>
             <tr>
                 <td th:text="ID"></td>
